--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,7 @@
-.btn {
-    background-color: blue;
-    color: #fff;
-    font-size: 15px;
-    padding: 15px;
-    margin-bottom: 15px;
+.card-img-top {
+    min-height: 380px;
 }
 
-.ppl {
-    border: 1px solid gray;
-    display: inline-block;
-    text-align: center;
-    padding: 0px 5px;
+.card-body {
+    min-height: 100px;
 }
