make sure user can change the list/card mode in the same searching result, and add some hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,20 @@
 .card-body {
     min-height: 100px;
 }
+
+.hover-color-change {
+    color: blue;
+    background-color: white;
+}
+
+.fa,
+.fas:hover {
+    cursor: pointer;
+}
+
+.scaleEffect:hover {
+    z-index: 1;
+    transform: scale(1.05);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+}
